# aiops-zabbix-monitor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_analysis.py  alerts.py  health.py  knowledge.py  llm_usage.py  reports.py  zabbix_webhook.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/llm/: base.py  deepseek_provider.py  gateway_provider.py  kimi_provider.py  mimo_plan_provider.py  mimo_provider.py  mock_provider.py  openai_provider.py
backend/app/models/: ai_analysis.py  alert.py  base.py  knowledge.py  llm_usage.py  remediation.py  types.py
backend/app/repositories/: ai_analysis_repo.py  alert_repo.py  usage_repo.py
backend/app/schemas/: ai_analysis.py  alert.py  common.py  llm.py  zabbix.py
backend/app/services/: ai_orchestrator.py  alert_deduplicator.py  alert_normalizer.py  model_router.py  notification_service.py  prompt_builder.py  report_service.py  storm_detector.py  zabbix_client.py
backend/app/tests/: conftest.py  test_ai_analysis.py  test_alert_dedup.py  test_alert_services.py  test_api_flows.py  test_health.py  test_migrations.py  test_mimo_plan_provider.py  test_seed.py  test_zabbix_webhook.py
docs/: API.md  ARCHITECTURE.md  OPENCODE_TASKS.md  ROADMAP.md  ZABBIX_REAL_INTEGRATION.md  ZABBIX_WEBHOOK_EXAMPLE.md
(+35 files in other folders)
